# jitos

./: .gitmodules  Cargo.toml  README.md  out.txt  run-serial.ps1  x86_64-jitos.json
layer-std/: Cargo.toml
lib/wasi/: Cargo.toml
lib/wasi/src/: lib.rs
lib/wasm/core/: Cargo.toml
lib/wasm/core/src/: binary.rs  exec.rs  lib.rs  valid.rs  validation.rs
lib/wasm/core/src/binary/: instructions.rs  modules.rs  types.rs  values.rs
lib/wasm/core/src/exec/: modules.rs  runtime.rs
lib/wasm/core/src/structure/: instructions.rs  modules.rs  types.rs
lib/wasm/core/src/syntax/: instructions.rs  modules.rs  types.rs
lib/wasm/core/src/valid/: instructions.rs  modules.rs  types.rs
lib/wasm/core/src/validation/: instructions.rs  modules.rs  types.rs
lib/wasm/interpret/: Cargo.toml
lib/wasm/interpret/src/: lib.rs  wasi.rs
lib/wasm/interpret/tests/: testsuite.rs
src/: allocator.rs  elf.rs  gdt.rs  interrupts.rs  lib.rs  logger.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs  wasm.rs
src/wasm/: binary.rs  decoder.rs  jitos_env.rs  validation.rs
src/wasm/binary/: instructions.rs  modules.rs  types.rs
src/wasm/decoder/: instructions.rs  modules.rs  types.rs  values.rs
src/wasm/structure/: instructions.rs  modules.rs  types.rs
src/wasm/validation/: instructions.rs  modules.rs  types.rs
test/: test  test.asm
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
wasm-test/: Cargo.toml
