[package]
name = "jitos"
version = "0.1.0"
authors = ["Icy Defiance <icydefiance@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = { version = "0.8.0", features = ["map_physical_memory"]}
cranelift-codegen = { path = "../cranelift/cranelift-codegen", default-features = false, features = ["core"] }
cranelift-entity = { path = "../cranelift/cranelift-entity" }
cranelift-wasm = { path = "../cranelift/cranelift-wasm", default-features = false, features = ["core"] }
lazy_static = { version = "1.0", features = ["spin_no_std"] }
linked_list_allocator = "0.6.4"
pc-keyboard = "0.3.1"
pic8259_simple = "0.1.1"
spin = "0.5.2"
target-lexicon = "0.10.0"
uart_16550 = "0.2.0"
volatile = "0.2.6"
x86_64 = "0.7.5"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33 # (0x10 << 1) | 1

[workspace]
members = ["wasm-test"]
