[package]
name = "wasm-interpret"
version = "0.1.0"
authors = ["Icy Defiance <icydefiance@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.7.0"
log = "0.4.8"
jitos-wasi = { path = "../../wasi" }
lazy_static = { version = "1.0", features = ["spin_no_std"] }
wasm-core = { path = "../core" }
